# lazy-pipe

./: .editorconfig  Cargo.toml  README.md
src/: fns.rs  impls.rs  lib.rs  structs.rs  traits.rs
