[package]
name = "lazy-pipe"
version = "0.1.3"
description = "Chain closures into a pipeline"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ksxrustcrates/lazy-pipe"
documentation = "https://docs.rs/lazy-pipe/"
categories = ["no-std"]
edition = "2018"
